[tool.poetry]
name = "AntiChannelBoT"
version = "0.1.2"
description = "A Telegram bot to Delete and Ban Message Sent By Channel"
authors = ["Achu biju <AmiFutami>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
Pyrogram = "^1.2.12"
TgCrypto = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
